# tasks

./: README.md
C++Basics/leetcode/week1/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  CMakeLists.txt  README.md
C++Basics/leetcode/week2/: README.md
C++Basics/sortAlgorithms/: CMakeLists.txt  README.md  bubblesort.cpp  countingsort.cpp  insertionsort.cpp  radixsort.cpp  selectionsort.cpp
DoPM/http/: CMakeLists.txt  client.cpp  server.cpp
DoPM/http/templates/: name.html
DoPM/ngrok/: .gitignore  CMakeLists.txt  conanfile.py  main.cpp
DoPM/protoTest/: CMakeLists.txt  ex.proto  main.cpp  read.cpp
DoPM/webHooks/: CMakeLists.txt  client.hpp  main.cpp  purchases.xlsx  regex  regex.cpp  server.cpp  temp.json  workWithDb.hpp
DoPM/webHooks/client/: client.py  requirements.txt
DoPM/webHooks/jsonTemplates/: temp.json  template.json
DoPM/yandexHttp/: CMakeLists.txt
DoPM/yandexHttp/include/: askwidget.hpp  geocordObject.hpp  httpManager.hpp  widget.hpp
DoPM/yandexHttp/src/: askwidget.cpp  geocordObject.cpp  httpManager.cpp  main.cpp  widget.cpp
Oop/any/: CMakeLists.txt  any.hpp  main.cpp
Oop/commandPattern/: CMakeLists.txt  README.md  main.cpp
Oop/commandPattern/commands/: backspacecommand.cpp  backspacecommand.hpp  command.hpp  emptycommand.cpp  emptycommand.hpp  shiftleftcommand.cpp  shiftleftcommand.hpp  shiftrightcommand.cpp  shiftrightcommand.hpp  typecommand.cpp  typecommand.hpp
Oop/commandPattern/controller/: controller.cpp  controller.hpp
Oop/commandPattern/editor/: editor.cpp  editor.hpp
Oop/commandPattern/uml/: comamnd.puml
Oop/simpleClass/: CMakeLists.txt  README.md
Oop/simpleClass/puml/: fraction.puml  shape.puml  time.puml  vector.puml
Oop/simpleClass/src/: CMakeLists.txt
Oop/simpleClass/src/shape/: CMakeLists.txt  main.cpp  shape.cpp  shape.hpp
Oop/simpleClass/src/simpleFraction/: CMakeLists.txt  main.cpp  simpleFraction.cpp  simpleFraction.hpp
Oop/simpleClass/src/time/: CMakeLists.txt  main.cpp  time.cpp  time.hpp
Oop/simpleClass/src/vector/: CMakeLists.txt  main.cpp  vector.cpp  vector.hpp
Oop/simpleClass/tests/: CMakeLists.txt
Oop/simpleClass/tests/shape/: CMakeLists.txt  test.cpp
Oop/simpleClass/tests/simpleFraction/: CMakeLists.txt  simpleFraction.cpp
Oop/simpleClass/tests/time/: CMakeLists.txt  tests.cpp
Oop/simpleClass/tests/vector/: CMakeLists.txt  tests.cpp
UML/laba1/: README.md  class.puml  sequenceCase1.puml  sequenceCase2.puml  sequenceCase3.puml  sequenceCase4.puml  sequenceCase5.puml  useCase.puml
UML/lesson/: ATM.puml  equation.puml
UML/umlTest/: README.md  activity.puml  classDiagram.puml  sequance.puml  state.puml  usecase.puml
